feature/text-editor - Adds buttons event