@@ -13,6 +13,13 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
 }
 
+run {
+    jvmArgs = [
+            "--module-path", classpath.asPath,
+            "--add-modules", "javafx.controls,javafx.graphics"
+    ]
+}
+
 application {
     mainClass = 'ui.EditWindow'
 }
